[package]
name = "symbolic-demangle"
version = "12.1.2"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-demangle"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
readme = "README.md"
description = """
A library to demangle symbols from various languages and compilers.
"""
build = "build.rs"
edition = "2021"

exclude = [
    "tests/**/*",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["cpp", "msvc", "rust", "swift"]
cpp = ["cpp_demangle"]
msvc = ["msvc-demangler"]
rust = ["rustc-demangle"]
swift = ["cc"]

[dependencies]
cpp_demangle = { version = "0.4.0", optional = true }
msvc-demangler = { version = "0.9.0", optional = true }
rustc-demangle = { version = "0.1.21", optional = true }
symbolic-common = { version = "12.1.2", path = "../symbolic-common" }

[build-dependencies]
cc = { version = "1.0.79", optional = true }

[dev-dependencies]
similar-asserts = "1.4.2"
