[package]
name = "symbolic-demangle"
version = "12.16.3"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-demangle"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
readme = "README.md"
description = """
A library to demangle symbols from various languages and compilers.
"""
build = "build.rs"
edition.workspace = true
rust-version.workspace = true

exclude = ["tests/**/*"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["cpp", "msvc", "rust", "swift"]
cpp = ["cpp_demangle"]
msvc = ["msvc-demangler"]
rust = ["rustc-demangle"]
swift = ["cc"]

[dependencies]
cpp_demangle = { workspace = true, optional = true }
msvc-demangler = { workspace = true, optional = true }
rustc-demangle = { workspace = true, optional = true }
symbolic-common = { version = "12.16.3", path = "../symbolic-common" }

[build-dependencies]
cc = { workspace = true, optional = true }

[dev-dependencies]
similar-asserts = { workspace = true }
