[package]
name = "symbolic-il2cpp"
version = "12.13.4"
license = "MIT"
authors = ["Sentry <hello@sentry.io>"]
documentation = "https://docs.rs/symbolic-il2cpp"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library for parsing il2cpp line mappings.
"""
edition = "2021"

[dependencies]
indexmap = { workspace = true }
serde_json = { workspace = true }
symbolic-common = { version = "12.13.4", path = "../symbolic-common" }
symbolic-debuginfo = { version = "12.13.4", path = "../symbolic-debuginfo" }
