[package]
name = "symbolic-minidump"
version = "7.5.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-minidump"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to process and inspect Minidump crash reports
"""
build = "build.rs"
edition = "2018"

include = [
    "/cpp/**/*",
    "/src/**/*",
    "/third_party/breakpad/src/**/*.h",
    "/third_party/breakpad/src/**/*.c",
    "/third_party/breakpad/src/**/*.cc",
    "/third_party/lss/**/*",
    "/build.rs",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.5"
serde = { version = "1.0.94", optional = true }
symbolic-common = { version = "7.5.0", path = "../symbolic-common" }
symbolic-debuginfo = { version = "7.5.0", path = "../symbolic-debuginfo" }
thiserror = "1.0.20"

[build-dependencies]
cc = { version = "1.0.50", features = ["parallel"] }

[dev-dependencies]
insta = "0.15.0"
symbolic-testutils = { path = "../symbolic-testutils" }
