[package]
name = "symbolic-minidump"
version = "8.7.1"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-minidump"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to process and inspect Minidump crash reports
"""
build = "build.rs"
edition = "2018"

include = [
    "/cpp/**/*",
    "/src/**/*",
    "/third_party/breakpad/src/**/*.h",
    "/third_party/breakpad/src/**/*.c",
    "/third_party/breakpad/src/**/*.cc",
    "/third_party/lss/*.h",
    "/build.rs",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["processor"]
processor = ["lazy_static", "regex"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
regex = { version = "1.3.5", optional = true }
serde = { version = "1.0.94", optional = true }
symbolic-common = { version = "8.7.1", path = "../symbolic-common" }
symbolic-debuginfo = { version = "8.7.1", path = "../symbolic-debuginfo" }
thiserror = "1.0.20"

[build-dependencies]
cc = { version = "1.0.50", features = ["parallel"] }

[dev-dependencies]
criterion = { version = "0.3.4", features = [ "html_reports" ] }
insta = "1.3.0"
proptest = "1.0.0"
rand = { version = "0.8.3", features = [ "small_rng" ] }
symbolic-testutils = { path = "../symbolic-testutils" }
similar-asserts = "1.0.0"
walkdir = "2.3.1"

[[bench]]
name = "nested_range_map"
harness = false

[[bench]]
name = "from_minidump"
harness = false

[[bench]]
name = "from_minidump_external"
harness = false
