[package]
name = "symbolic-ppdb"
version = "12.6.0"
license = "MIT"
authors = [
    "Sebastian Zivota <sebastian.zivota@sentry.io>",
    "Arpad Borsos <arpad.borsos@sentry.io>"
]
documentation = "https://docs.rs/symbolic-ppdb"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library for parsing and performing lookups on Portable PDB files.
"""
edition = "2021"

exclude = ["tests/**/*"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
indexmap = "2.0.0"
symbolic-common = { version = "12.6.0", path = "../symbolic-common" }
watto = { version = "0.1.0", features = ["writer", "strings"] }
thiserror = "1.0.39"
uuid = "1.3.0"
flate2 = { version = "1.0.25", default-features = false, features = ["rust_backend"] }
serde_json = "1.0.102"
serde = "1.0.171"

[dev-dependencies]
symbolic-debuginfo = { path = "../symbolic-debuginfo" }
symbolic-testutils = { path = "../symbolic-testutils" }
