[package]
name = "symbolic-ppdb"
version = "12.9.0"
license = "MIT"
authors = [
    "Sebastian Zivota <sebastian.zivota@sentry.io>",
    "Arpad Borsos <arpad.borsos@sentry.io>"
]
documentation = "https://docs.rs/symbolic-ppdb"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library for parsing and performing lookups on Portable PDB files.
"""
edition = "2021"

exclude = ["tests/**/*"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
indexmap = { workspace = true }
symbolic-common = { workspace = true }
watto = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
symbolic-debuginfo = { workspace = true }
symbolic-testutils = { workspace = true }
