[package]
name = "symbolic-ppdb"
version = "12.16.0"
license = "MIT"
authors = [
    "Sebastian Zivota <sebastian.zivota@sentry.io>",
    "Arpad Borsos <arpad.borsos@sentry.io>",
]
documentation = "https://docs.rs/symbolic-ppdb"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library for parsing and performing lookups on Portable PDB files.
"""
edition.workspace = true
rust-version.workspace = true

exclude = ["tests/**/*"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
flate2 = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symbolic-common = { version = "12.16.0", path = "../symbolic-common" }
thiserror = { workspace = true }
uuid = { workspace = true }
watto = { workspace = true }

[dev-dependencies]
symbolic-debuginfo = { path = "../symbolic-debuginfo" }
symbolic-testutils = { path = "../symbolic-testutils" }
