[package]
name = "symbolic-sourcemapcache"
version = "12.7.1"
license = "MIT"
authors = ["Sentry <hello@sentry.io>"]
documentation = "https://docs.rs/symbolic-sourcemapcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A fast lookup cache for JavaScript Source Maps.
"""
edition = "2021"

[dependencies]
itertools = "0.12.0"
js-source-scopes = "0.4.0"
sourcemap = "7.0.0"
symbolic-common = { version = "12.7.1", path = "../symbolic-common" }
thiserror = "1.0.39"
tracing = "0.1.37"
watto = { version = "0.1.0", features = ["writer", "strings"] }

[dev-dependencies]
symbolic-testutils = { path = "../symbolic-testutils" }
