[package]
name = "symbolic-sourcemapcache"
version = "12.12.3"
license = "MIT"
authors = ["Sentry <hello@sentry.io>"]
documentation = "https://docs.rs/symbolic-sourcemapcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A fast lookup cache for JavaScript Source Maps.
"""
edition = "2021"

[dependencies]
itertools = { workspace = true }
js-source-scopes = { workspace = true }
sourcemap = { workspace = true }
symbolic-common = { version = "12.12.3", path = "../symbolic-common" }
thiserror = { workspace = true }
tracing = { workspace = true }
watto = { workspace = true }

[dev-dependencies]
symbolic-testutils = { path = "../symbolic-testutils" }
