[package]
name = "symbolic-symcache"
version = "12.8.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-symcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
An optimized cache file for fast and memory efficient lookup of symbols and
stack frames in debugging information.
"""
edition = "2021"

exclude = [
    "tests/**/*",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
symbolic-common = { version = "12.8.0", path = "../symbolic-common" }
symbolic-debuginfo = { version = "12.8.0", path = "../symbolic-debuginfo" }
symbolic-il2cpp = { version = "12.8.0", path = "../symbolic-il2cpp", optional = true }
thiserror = "1.0.39"
indexmap = "2.0.0"
tracing = "0.1.37"
watto = { version = "0.1.0", features = ["writer", "strings"] }

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
criterion = "0.5.1"
symbolic-testutils = { path = "../symbolic-testutils" }
similar-asserts = "1.4.2"

[features]
bench = []
il2cpp = ["symbolic-il2cpp"]

[[bench]]
name = "bench_writer"
harness = false
