[package]
name = "symbolic-symcache"
version = "12.9.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-symcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
An optimized cache file for fast and memory efficient lookup of symbols and
stack frames in debugging information.
"""
edition = "2021"

exclude = [
    "tests/**/*",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
symbolic-common = { workspace = true }
symbolic-debuginfo = { workspace = true }
symbolic-il2cpp = { workspace = true, optional = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
watto = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
symbolic-testutils = { workspace = true }

[features]
bench = []
il2cpp = ["symbolic-il2cpp"]

[[bench]]
name = "bench_writer"
harness = false
