[package]
name = "symbolic-symcache"
version = "12.17.1"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-symcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
An optimized cache file for fast and memory efficient lookup of symbols and
stack frames in debugging information.
"""
edition.workspace = true
rust-version.workspace = true

exclude = ["tests/**/*"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
indexmap = { workspace = true }
symbolic-common = { version = "12.17.1", path = "../symbolic-common" }
symbolic-debuginfo = { version = "12.17.1", path = "../symbolic-debuginfo" }
symbolic-il2cpp = { version = "12.17.1", path = "../symbolic-il2cpp", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
watto = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
symbolic-testutils = { path = "../symbolic-testutils" }

[features]
bench = []
il2cpp = ["symbolic-il2cpp"]

[[bench]]
name = "bench_writer"
harness = false
