[package]
name = "symbolic-unreal"
version = "12.3.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
    "Bruno Garcia <bruno@brunogarcia.com>",
]
documentation = "https://docs.rs/symbolic-unreal"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
Parsing and processing utilities for Unreal Engine 4 crash files.
"""
edition = "2021"

exclude = [
    "tests/**/*",
]

[package.metadata.docs.rs]
all-features = true

[features]
serde = ["dep:serde", "chrono/serde"]

[dependencies]
anylog = "0.6.4"
bytes = "1.4.0"
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
elementtree = "1.2.3"
flate2 = { version = "1.0.25", features = ["rust_backend"], default-features = false }
lazy_static = "1.4.0"
regex = "1.7.1"
scroll = { version = "0.11.0", features = ["derive"] }
serde = { version = "1.0.154", optional = true, features = ["derive"] }
thiserror = "1.0.39"
time = { version = "0.3.20", features = ["formatting"] }

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
symbolic-testutils = { path = "../symbolic-testutils" }
similar-asserts = "1.4.2"
