[package]
name = "symbolic-unreal"
version = "12.15.5"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
    "Bruno Garcia <bruno@brunogarcia.com>",
]
documentation = "https://docs.rs/symbolic-unreal"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
Parsing and processing utilities for Unreal Engine 4 crash files.
"""
edition.workspace = true
rust-version.workspace = true

exclude = ["tests/**/*"]

[package.metadata.docs.rs]
all-features = true

[features]
serde = ["dep:serde", "chrono/serde"]

[dependencies]
anylog = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
elementtree = { workspace = true }
flate2 = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
scroll = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
similar-asserts = { workspace = true }
symbolic-testutils = { path = "../symbolic-testutils" }
