[package]
name = "symbolic-unwind"
version = "8.0.3"
license = "MIT"
authors = ["Sebastian Zivota <loewenheim@mailbox.org>"]
documentation = "https://docs.rs/symbolic-symcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
edition = "2018"
publish = false

[dependencies]
nom = "6.1.2"

[badges]
travis-ci = { repository = "getsentry/symbolic", branch = "master" }
