[package]
name = "symbolic-unwind"
version = "8.2.1"
license = "MIT"
authors = ["Sebastian Zivota <loewenheim@mailbox.org>"]
documentation = "https://docs.rs/symbolic-symcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
edition = "2018"
publish = false

[dependencies]
insta = "1.7.1"
nom = "6.1.2"
num-traits = "0.2.14"

[dev-dependencies]
proptest = "1.0.0"

[badges]
travis-ci = { repository = "getsentry/symbolic", branch = "master" }
