[package]
name = "symbolic-wasm"
version = "13.3.1"
license = "MIT"
authors = [
    "Sentry <hello@sentry.io>",
]
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
WebAssembly bindings for symbolic-debuginfo, published to npm as
@sentry/symbolic. Parses debug information files (Mach-O, ELF, PE/PDB,
Portable PDB, WebAssembly, Breakpad, SourceBundle) in the browser or Node.
"""
edition.workspace = true
rust-version.workspace = true
# Published to npm (@sentry/symbolic), not crates.io.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
# All formats. zstd-compressed ELF debug sections are handled by symbolic-debuginfo
# itself (pure-Rust `ruzstd` on wasm32, selected via cfg(target_arch)).
# The unified Archive/Object API requires breakpad+elf+macho+ms+sourcebundle+wasm
# (dwarf is pulled transitively); ppdb+js are enabled for completeness.
symbolic-debuginfo = { version = "13.3.1", path = "../symbolic-debuginfo", default-features = false, features = [
    "breakpad",
    "elf",
    "macho",
    "ms",
    "ppdb",
    "sourcebundle",
    "js",
    "wasm",
] }

# NOTE: profile settings for the wasm build are applied via `--config` in
# build-npm.sh — a `[profile.release]` here would be ignored by Cargo because
# this is not the workspace root package.
