[package]
name = "symbolic"
version = "12.9.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
readme = "README.md"
description = """
A library to symbolicate and process stack traces from native applications,
minidumps, Unreal Engine 4 or minified JavaScript.
"""
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["debuginfo"]
cfi = ["symbolic-cfi", "debuginfo"]
common-serde = ["symbolic-common/serde"]
debuginfo = ["symbolic-debuginfo"]
debuginfo-serde = ["debuginfo", "common-serde"]
demangle = ["symbolic-demangle"]
il2cpp = ["symbolic-il2cpp", "symbolic-symcache/il2cpp"]
ppdb = ["symbolic-ppdb"]
sourcemapcache = ["symbolic-sourcemapcache"]
symcache = ["symbolic-symcache", "debuginfo"]
unreal = ["symbolic-unreal"]
unreal-serde = ["unreal", "common-serde", "symbolic-unreal/serde"]

[dependencies]
symbolic-cfi = { workspace = true, optional = true }
symbolic-common = { workspace = true }
symbolic-debuginfo = { workspace = true, optional = true }
symbolic-demangle = { workspace = true, optional = true }
symbolic-il2cpp = { workspace = true, optional = true }
symbolic-ppdb = { workspace = true, optional = true }
symbolic-sourcemapcache = { workspace = true, optional = true }
symbolic-symcache = { workspace = true, optional = true }
symbolic-unreal = { workspace = true, optional = true }
