[package]
name = "symbolic"
version = "12.13.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
readme = "README.md"
description = """
A library to symbolicate and process stack traces from native applications,
minidumps, Unreal Engine 4 or minified JavaScript.
"""
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["debuginfo"]
cfi = ["symbolic-cfi", "debuginfo"]
common-serde = ["symbolic-common/serde"]
debuginfo = ["symbolic-debuginfo"]
debuginfo-serde = ["debuginfo", "common-serde"]
demangle = ["symbolic-demangle"]
il2cpp = ["symbolic-il2cpp", "symbolic-symcache/il2cpp"]
ppdb = ["symbolic-ppdb"]
sourcemapcache = ["symbolic-sourcemapcache"]
symcache = ["symbolic-symcache", "debuginfo"]
unreal = ["symbolic-unreal"]
unreal-serde = ["unreal", "common-serde", "symbolic-unreal/serde"]

[dependencies]
symbolic-cfi = { version = "12.13.0", path = "../symbolic-cfi", optional = true }
symbolic-common = { version = "12.13.0", path = "../symbolic-common" }
symbolic-debuginfo = { version = "12.13.0", path = "../symbolic-debuginfo", optional = true }
symbolic-demangle = { version = "12.13.0", path = "../symbolic-demangle", optional = true }
symbolic-il2cpp = { version = "12.13.0", path = "../symbolic-il2cpp", optional = true }
symbolic-ppdb = { version = "12.13.0", path = "../symbolic-ppdb", optional = true }
symbolic-sourcemapcache = { version = "12.13.0", path = "../symbolic-sourcemapcache", optional = true }
symbolic-symcache = { version = "12.13.0", path = "../symbolic-symcache", optional = true }
symbolic-unreal = { version = "12.13.0", path = "../symbolic-unreal", optional = true }
