[package]
name = "symbolic-symcache"
version = "6.1.1"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-symcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
An optimizied cache file for fast and memory efficient lookup of symbols and
stack frames in debugging information.
"""
edition = "2018"

exclude = [
    "tests/**/*",
]

[dependencies]
failure = "0.1.5"
fnv = "1.0.6"
num = "0.2.0"
symbolic-common = { version = "6.1.1", path = "../common" }
symbolic-debuginfo = { version = "6.1.1", path = "../debuginfo" }

[dev-dependencies]
insta = "0.7.1"

[features]
bench = []
