[package]
name = "symbolic-symcache"
version = "7.2.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-symcache"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
An optimizied cache file for fast and memory efficient lookup of symbols and
stack frames in debugging information.
"""
edition = "2018"

exclude = [
    "tests/**/*",
]

[dependencies]
failure = "0.1.5"
fnv = "1.0.6"
num = "0.2.1"
symbolic-common = { version = "7.2.0", path = "../common" }
symbolic-debuginfo = { version = "7.2.0", path = "../debuginfo" }

[dev-dependencies]
insta = "0.15.0"
criterion = "0.3.1"
symbolic-testutils = { path = "../testutils" }

[features]
bench = []

[[bench]]
name = "bench_writer"
harness = false
