[package]
name = "symbolic-testutils"
version = "5.7.7"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
Helper crate for testing symbolic.
"""
edition = "2018"

[dependencies]
difference = "2.0.0"
