[package]
name = "symbolic-unreal"
version = "5.8.2"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
    "Bruno Garcia <bruno@brunogarcia.com>",
]
documentation = "https://docs.rs/symbolic-unreal"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
Parsing and processing utilities for Unreal Engine 4 crash files.
"""
edition = "2018"

[features]
with-serde = ["serde", "chrono/serde"]

[dependencies]
anylog = "0.3.1"
bytes = "0.4.11"
chrono = { version = "0.4.6" }
compress = "0.1.2"
elementtree = "0.5.0"
failure = "0.1.5"
lazy_static = "1.2.0"
regex = "1.1.0"
serde = { version = "1.0.88", optional = true, features = ["derive"] }

[dev-dependencies]
insta = "0.6.3"
