[package]
name = "symbolic-unreal"
version = "6.1.2"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
    "Bruno Garcia <bruno@brunogarcia.com>",
]
documentation = "https://docs.rs/symbolic-unreal"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
Parsing and processing utilities for Unreal Engine 4 crash files.
"""
edition = "2018"

exclude = [
    "tests/**/*",
]

[features]
with-serde = ["serde", "chrono/serde"]

[dependencies]
anylog = "0.4.0"
bytes = "0.4.12"
chrono = "0.4.6"
compress = "0.1.2"
elementtree = "0.5.0"
failure = "0.1.5"
lazy_static = "1.3.0"
regex = "1.1.6"
serde = { version = "1.0.91", optional = true, features = ["derive"] }

[dev-dependencies]
insta = "0.8.1"
